# File_Handler_Over_Linux

./: CMakeLists.txt  README.md
File_Handler/: CMakeLists.txt  fh.cpp
Files/: file3.txt
Logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
Requester/: CMakeLists.txt  requester.cpp
